service/anchore-ui-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: < your name > #eg anchore-ui-lb
  annotations:
          networking.gke.io/load-balancer-type: "Internal"
  namespace: < your namespace >
spec:
  ports:
  - name: anchore-enterprise-ui-web
    protocol: TCP
    targetPort: 3000
    port: 80
  selector:
    app: anchore-jtchoffo-anchore-engine
    component: enterprise-ui
  type: LoadBalancer
